data/forge_javadoc/1.7.10/raw/net/minecraft/client/renderer/entity/RenderHorse.md
---
title: "RenderHorse"
description: "public class RenderHorse extends RenderLiving"
package: "net/minecraft/client/renderer/entity"
version: "1.7.10"
forgeBuild: "10.13.4.1614"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/client/renderer/entity/RenderHorse.html"
sourceType: javadoc
---

# RenderHorse

**Inheritance:** java.lang.Object → net.minecraft.client.renderer.entity.Render → net.minecraft.client.renderer.entity.RendererLivingEntity → net.minecraft.client.renderer.entity.RenderLiving → net.minecraft.client.renderer.entity.RenderHorse

## Class signature

```java
public class RenderHorse extends RenderLiving
```

## Methods

- `protected ResourceLocation getEntityTexture(Entity p_110775_1_)`
- `protected ResourceLocation getEntityTexture(EntityHorse p_110775_1_)`
- `protected void preRenderCallback(EntityHorse p_77041_1_, float p_77041_2_)`
- `protected void preRenderCallback(EntityLivingBase p_77041_1_, float p_77041_2_)`
- `protected void renderModel(EntityHorse p_77036_1_, float p_77036_2_, float p_77036_3_, float p_77036_4_, float p_77036_5_, float p_77036_6_, float p_77036_7_)`
- `protected void renderModel(EntityLivingBase p_77036_1_, float p_77036_2_, float p_77036_3_, float p_77036_4_, float p_77036_5_, float p_77036_6_, float p_77036_7_)`

## Fields

- `RenderHorse`
