data/forge_javadoc/1.8.9/raw/net/minecraft/client/renderer/entity/RenderHorse.md
---
title: "RenderHorse"
description: "public class RenderHorse extends RenderLiving<EntityHorse>"
package: "net/minecraft/client/renderer/entity"
version: "1.8.9"
forgeBuild: "11.15.1.2318"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.8.9-11.15.1.2318/net/minecraft/client/renderer/entity/RenderHorse.html"
sourceType: javadoc
---

# RenderHorse

**Inheritance:** java.lang.Object → net.minecraft.client.renderer.entity.Render<T> → net.minecraft.client.renderer.entity.RendererLivingEntity<T> → net.minecraft.client.renderer.entity.RenderLiving<EntityHorse> → net.minecraft.client.renderer.entity.RenderHorse

## Class signature

```java
public class RenderHorse extends RenderLiving<EntityHorse>
```

## Methods

- `protected ResourceLocation getEntityTexture(EntityHorse entity)` — Returns the location of an entity's texture.
- `protected void preRenderCallback(EntityHorse entitylivingbaseIn, float partialTickTime)` — Allows the render to do any OpenGL state modifications necessary before the model is rendered.

## Fields

- `RenderHorse`
